[package]
name = "dobert"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.crossterm]
version = "0.27"
features = ["event-stream"]
